--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 /*
-	Theme Name: HTML5 Blank
-	Theme URI: http://html5blank.com
-	Description: HTML5 Blank WordPress Theme
-	Version: 1.4.3
-	Author: Todd Motto (@toddmotto)
-	Author URI: http://toddmotto.com
-	Tags: Blank, HTML5, CSS3
-
+	Theme Name: Alda
+	Theme URI: TBA
+	Description: WordPress Theme based on HTML5 Blank
+	Version: 1.0
+	Author: mkmeese
+	Author URI: http://mkmeese.com
+	Tags: HTML5, CSS3, trees, dark green
 	License: MIT
 	License URI: http://opensource.org/licenses/mit-license.php
 */
