--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ input:focus {
 	TYPOGRAPHY
 \*------------------------------------*/
 
-@font-face {
+/*@font-face {
 	font-family:'Font-Name';
 	src:url('fonts/font-name.eot');
 	src:url('fonts/font-name.eot?#iefix') format('embedded-opentype'),
@@ -128,6 +128,38 @@ input:focus {
 		url('fonts/font-name.svg#font-name') format('svg');
     font-weight:normal;
     font-style:normal;
+}*/
+
+/*  SECTIONS  */
+.section {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+}
+
+/*  COLUMN SETUP  */
+.col {
+	display: block;
+	float:left;
+	margin: 1% 0 1% 2.4%;
+}
+.col:first-child { margin-left: 0; }
+
+/*  GROUPING  */
+.group:before,
+.group:after { content:""; display:table; }
+.group:after { clear:both;}
+.group { zoom:1; /* For IE 6/7 */ }
+
+/*  GRID OF THREE  */
+.span_3_of_3 { width: 100%; }
+.span_2_of_3 { width: 65.86%; }
+.span_1_of_3 { width: 31.73%; }
+
+/*  GO FULL WIDTH BELOW 480 PIXELS */
+@media only screen and (max-width: 480px) {
+	.col {  margin: 1% 0 1% 0%; }
+	.span_3_of_3, .span_2_of_3, .span_1_of_3 { width: 100%; }
 }
 
 /*------------------------------------*\
