Adding elements to templates
Added site title, menus, widgets, header image, front-page.php, created
several empty CSS classes, removed sidebar. Working toward having
everything present before styling.

--- a/style.css
+++ b/style.css
@@ -83,13 +83,27 @@ input:focus {
 .header {
 
 }
+/* Header Image*/
+.headerimg{
+	
+}
+
 /* logo */
 .logo {
-
+ 
 }
 .logo-img {
+height:100px;
+}
+/* site title */
+.site-title {
 
 }
+/* Tagline */
+.tagline {
+
+}
+
 /* nav */
 .nav {
 
@@ -98,6 +112,12 @@ input:focus {
 .sidebar {
 
 }
+
+/* buttonrow */
+.buttonrow {
+
+}
+
 /* footer */
 .footer {
 
