--- a/style.css
+++ b/style.css
@@ -29,8 +29,12 @@ html {
 	font-size:62.5%;
 }
 body {
-	font:300 11px/1.4 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	color:#444;
+	font:400 16px/1.6 'Noto Sans', sans-serif;
+	color:#41281e;
+}
+
+h1, h2, h3, h1 a, h2 a, h3 a {
+	color:#004200;
 }
 /* clear */
 .clear:before,
@@ -50,11 +54,11 @@ img {
 	vertical-align:bottom;
 }
 a {
-	color:#444;
+	color:#000055;
 	text-decoration:none;
 }
 a:hover {
-	color:#444;
+	text-decoration: underline;
 }
 a:focus {
 	outline:0;
@@ -81,46 +85,128 @@ input:focus {
 }
 /* header */
 .header {
-
-}
-/* Header Image*/
-.headerimg{
-	
+	    background:url('http://dev.mkmeese.com/wp-content/themes/mkm-alda/img/headers/default.jpg') no-repeat center top; 
+		background-size: 100%;
+		padding-top: 25%;
 }
 
 /* logo */
 .logo {
- 
+	float: left;
+	display: block;
+
 }
 .logo-img {
-height:100px;
+	height:150px;
+	margin: 15px;
 }
 /* site title */
-.site-title {
-
+.site-title, .site-title {
+	margin: 15px;
+	color: white;
+	font-family: 'Noto Serif', serif;
+	text-shadow: 2px 2px 4px #41281e;
 }
-/* Tagline */
-.tagline {
 
+/* My Name in header*/
+#name, #name a{
+	margin: 5px;
+	color: white;
+	font-size: 2em;
+	display: block;
+}
+
+/* Tagline */
+#tagline, #tagline a {
+	margin: 5px;
+	color: white;
+	font-size: 1.5em;
+	display: block;
 }
 
 /* nav */
-.nav {
+.nav, .nav ul li a{
+	color: white;
+	display: block;
+}
+.nav, .nav ul li a:hover{
+	text-decoration: underline;
+}
+
+/* Social nav */
+.social li {
+	list-style: none;
+	float: left;
+    position: relative;
+    margin: 0px 5px;
+	font-size: 1.5em;
+}
+
+/* Top nav */
+#topnav ul li{
+	list-style: none;
+	float: right;
+    position: relative;
+    margin: 0px 5px;
+	font-size: 1.5em;
+	font-family: 'Noto Serif', serif;
+	text-shadow: 2px 2px 4px #41281e;
+}
+
+
+
+/* portfolio */
+.portfolio {
 
 }
-/* sidebar */
-.sidebar {
 
+/* timeline row container */
+.timerow{
+	border:none; 
+    background:url('http://dev.mkmeese.com/wp-content/themes/mkm-alda/img/branches.svg') no-repeat; 
+	background-size: 100%;
+}
+/* timeline row container */
+.yearbox{
+    background-color: #004200;
+    text-align: center;
+    border-radius: 25px;
+    height: 75px;
+    width: 75px;
+	color: white;
+	margin: auto;
+	text-shadow: 2px 2px 4px #41281e;
 }
 
-/* buttonrow */
+.timebox{
+	text-align: center;
+}
+
+
+/* Container for row of three buttons */
 .buttonrow {
 
 }
 
 /* footer */
 .footer {
+	background-color: #41281e;
+}
 
+/* Copyright info in footer*/
+#copy p {
+	color: white;
+}
+
+#copy a{
+	color: white;
+	text-decoration: underline;
+}
+
+/* Social nav in footer */
+#soc-foot{
+	display:block;
+	float: right;
 }
 
 /*------------------------------------*\
@@ -135,26 +221,12 @@ height:100px;
 
 
 
-/*------------------------------------*\
-	TYPOGRAPHY
-\*------------------------------------*/
-
-/*@font-face {
-	font-family:'Font-Name';
-	src:url('fonts/font-name.eot');
-	src:url('fonts/font-name.eot?#iefix') format('embedded-opentype'),
-		url('fonts/font-name.woff') format('woff'),
-		url('fonts/font-name.ttf') format('truetype'),
-		url('fonts/font-name.svg#font-name') format('svg');
-    font-weight:normal;
-    font-style:normal;
-}*/
-
 /*  SECTIONS  */
 .section {
 	clear: both;
 	padding: 0px;
 	margin: 0px;
+
 }
 
 /*  COLUMN SETUP  */
@@ -189,9 +261,26 @@ height:100px;
 @media only screen and (min-width:320px) {
 
 }
-@media only screen and (min-width:480px) {
 
+@media only screen and (max-width:480px) {
+.header {
+	background-image: none;
+	background-color: #004200;
+	height: 150px;
+	padding-top: 5px;
 }
+#tagline, #tagline a {
+	display: none;}
+#name, #name a {
+	font-size: 1.5em;
+}	
+
+.timerow{
+	background-image: none;
+}
+	
+}
+
 @media only screen and (min-width:768px) {
 
 }
@@ -214,17 +303,17 @@ height:100px;
 \*------------------------------------*/
 
 ::selection {
-	background:#04A4CC;
+	background:#82c8ff;
 	color:#FFF;
 	text-shadow:none;
 }
 ::-webkit-selection {
-	background:#04A4CC;
+	background:#82c8ff;
 	color:#FFF;
 	text-shadow:none;
 }
 ::-moz-selection {
-	background:#04A4CC;
+	background:#82c8ff;
 	color:#FFF;
 	text-shadow:none;
 }
